@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?> 
-<addon id="plugin.video.vegaplayer.dk" version="1.0.2" name="VEGA Player" provider-name="twinther [tommy@winther.nu]">
+<addon id="plugin.video.vegaplayer.dk" version="1.1.0" name="VEGA Player" provider-name="twinther [tommy@winther.nu]">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
 	<import addon="script.module.elementtree" version="1.2.7"/>
-    <import addon="script.module.danishaddons" version="1.1.0"/>
-  </requires> 
+  </requires>
   <extension point="xbmc.python.pluginsource" library="addon.py">
 	  <provides>video</provides>
   </extension> 
